<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/drawMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/shapesGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/drawBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/drawBtn" />

        <RadioButton
            android:id="@+id/moveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveBtn" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/shapesGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/spinnerColors"
        app:layout_constraintStart_toEndOf="@+id/drawMove"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rectBtn" />

        <RadioButton
            android:id="@+id/circleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circleBtn" />

        <RadioButton
            android:id="@+id/triangleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangleBtn" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerColors"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:entries="@array/colors"
        app:layout_constraintStart_toEndOf="@+id/shapesGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/undoBtn"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginEnd="300dp"
        android:layout_marginStart="100dp"
        android:text="@string/undoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerColors"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.drawshapes.MyView
        android:id="@+id/myView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/undoBtn"
        app:layout_constraintVertical_bias="0.995"></com.example.drawshapes.MyView>

</androidx.constraintlayout.widget.ConstraintLayout>